[package]
name = "syscall-latency-exporter"
version = "0.1.0"
authors = ["Takashi IIGUNI <iiguni.tks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
libbpf-rs = "0.6.2"
plain = "0.2.3"
structopt = "0.3.21"
